Tue Mar 28 18:02:41 1995  John Gilmore  (gnu at toad.com)

	* Makefile.in (KRB5_HEADERS, install):  Account for file renames.
	(all-mac):  Add.
	* configure.in (CONFIG_RULES):  Remove.
	(krb5_sigtype):  Define as either void or int.
	* encryption.h:  Insert parentheses in macros to avoid mis-expansion.
	* k5-config.h:  Further parameterize socket support.
	* macsock.h:  Support connect(), recv(), send(), getmyipaddr().
	(WSAGetLastError):  Fix typo -- there's no argument to this macro.

	* k5-errors.h:  Rename errors.h (which duplicated a standard Mac
	header name, causing a problem).
	* AddressXlation.h, GetMyIPAddr.h, MacTCPCommonTypes.h, TCPPB.h, 
	UDPPB.h:  Add MacTCP header files.

Mon Mar 27 09:33:10 1995  Chris Provenzano (proven@mit.edu)

        * func-proto.h (krb5_rd_req(), krb5_rd_req_decode(), krb5_mk_rep(),
                krb5_recvauth(), and krb5_compat_recvauth(). Added a 
		krb5_auth_context argument and eliminated many of the 
		other arguments because they are included in the 
		krb5_auth_context structure.

Fri Mar 24 14:15:51 1995    <tytso@rsx-11.mit.edu>

	* adm_defs.h (ADM5_DEFAULT_PORT): Add definition of default
		administration port.

	* Makefile.in (install): Delete the destination header files
		before copying in the new ones.  Also install autoconf.h.
		Only install header files if the header file has changed.

Wed Mar 22 11:37:24 1995 Keith Vetter (keithv@fusion.com)

	* k5-config.h: added HAVE_SYS_TYPES_H. Cleaned up the loading
           of sys/types.h which john added earlier. Specifically, we always
           have it and it's missing some typedefs used by this code.

Tue Mar 21 18:42:23 1995 Keith Vetter (keithv@fusion.com)

	* k5-config.h: PC: NO_PASSWORD defined and files opened in binary mode.
	* func-proto.h: added new prototype for notify programs when the 
           ccache changes, and moved krb5_get_default_realm from los-proto.h.
        * los-proto.h: moved krb5_get_default_realm into func-proto.h.
